added typing event which is broadcasted to other sockets, ie gwan is typing...

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
         <div id="chatroom">
             <div id="chat-window">
                 <div id="output"></div>
+                <div id="feedback"></div>
             </div>
             <input type="text" id="handle" placeholder="Handle" />
             <input type="text" id="message" placeholder="Message" />
